currency handling in backend, other improvements